create home page

--- a/style.css
+++ b/style.css
@@ -16,7 +16,9 @@
   --text-color: #020102;
   --bg-color: #fff;
 }
-
+section {
+  padding: 4rem 0 2rem;
+}
 img {
   width: 100%;
 }
@@ -67,7 +69,118 @@ header {
   text-transform: uppercase;
   font-weight: 500;
 }
-.navbar a:hover {
+.navbar a:hover,
+.navbar .active {
   color: var(--main-color);
   border-bottom: 3px solid var(--main-color);
+}
+#search-icon {
+  font-size: 24px;
+  cursor: pointer;
+  color: var(--bg-color);
+}
+.search-box {
+  position: absolute;
+  top: 110%;
+  right: 0;
+  left: 0;
+  background: var(--bg-color);
+  box-shadow: 4px 4px 20px rgb(15, 54, 55 / 10%);
+  border: 1px solid var(--main-color);
+  border-radius: 0.5rem;
+  clip-path: circle(0% at 100% 0%);
+}
+.search-box.active {
+  clip-path: circle(144% at 100% 0%);
+}
+
+.search-box input {
+  width: 100%;
+  padding: 20px;
+  border: none;
+  outline: none;
+  background: transparent;
+  font-size: 1rem;
+}
+
+.home {
+  max-width: 1300px;
+  margin: auto;
+  width: 100%;
+  min-height: 640px;
+  display: flex;
+  align-items: center;
+  background: url(img/Background-home.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center left;
+}
+
+.home-text {
+  padding-left: 130px;
+}
+
+.home-text h1 {
+  font-size: 2.4rem;
+}
+.home-text span {
+  color: var(--main-color);
+}
+.home-text p {
+  font-size: 0.938rem;
+  font-weight: 300;
+  margin: 0.5rem 0 1.2rem;
+}
+.btn {
+  padding: 10px 22px;
+  background: var(--main-color);
+  color: var(--bg-color);
+  font-weight: 400;
+}
+.btn:hover {
+  background: #fd052f;
+}
+.heading {
+  text-align: center;
+}
+.heading span {
+  font-weight: 500;
+  color: var(--main-color);
+}
+.heading p {
+  font-size: 0.938rem;
+  font-weight: 300;
+}
+.cars-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+  margin-top: 2rem;
+}
+.cars-container .box {
+  flex: 1 1 17rem;
+  position: relative;
+  height: 200px;
+  border-radius: 0.5rem;
+  overflow: hidden;
+}
+.cars-container .box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  overflow: hidden;
+}
+.cars-container .box img:hover {
+  transform: scale(1.1);
+  transition: 0.5s;
+}
+.cars-container .box h2 {
+  position: absolute;
+  bottom: 1rem;
+  left: 1rem;
+  font-weight: 400;
+  font-size: 1rem;
+  background: var(--bg-color);
+  padding: 8px;
+  border-radius: 0.5rem;
 }
