--- a/style.css
+++ b/style.css
@@ -184,3 +184,168 @@ header {
   padding: 8px;
   border-radius: 0.5rem;
 }
+.cars-container .box:hover h2 {
+  background: var(--main-color);
+  color: var(--bg-color);
+}
+.about {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 1.5rem;
+}
+.about-img {
+  flex: 1 1 21rem;
+}
+.about-text {
+  flex: 1 1 21rem;
+}
+.about-text span {
+  font-weight: 500;
+  color: var(--main-color);
+}
+.about-text h2 {
+  font-size: 1.7rem;
+}
+.about-text p {
+  font-size: 00.938rem;
+  margin: 0.5rem 0 1.4rem;
+}
+.parts-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+  margin-top: 2rem;
+}
+.parts-container .box {
+  flex: 1 1 17rem;
+  position: relative;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  background: #f6f6f6;
+  border-radius: 0.5rem;
+}
+.parts-container .box img {
+  width: 100%;
+  height: 150px;
+  object-fit: contain;
+  object-position: center;
+  margin-bottom: 1rem;
+}
+.parts-container .box h3 {
+  font-size: 1.1rem;
+  font-weight: 600;
+}
+.parts-container .box span {
+  font-size: 1.1rem;
+  font-weight: 600;
+  color: var(--main-color);
+}
+.parts-container .box .bx {
+  color: var(--main-color);
+  margin: 0.8rem 0;
+}
+.parts-container .box .btn {
+  max-width: 120px;
+}
+.parts-container .box .details {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  bottom: 1.8rem;
+  right: 1rem;
+  font-size: 1rem;
+  color: var(--text-color);
+}
+.parts-container .box .details:hover {
+  color: var(--main-color);
+  text-decoration: underline;
+}
+.blog-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+  margin-top: 2rem;
+}
+.blog-container .box {
+  flex: 1 1 13rem;
+  padding: 20px;
+}
+.blog-container .box:hover {
+  background: #f6f6f6;
+}
+.blog-container .box span {
+  font-size: 0.8rem;
+  color: var(--main-color);
+}
+.blog-container h3 {
+  font-size: 1.2rem;
+}
+.blog-container .box p {
+  font-size: 0.938rem;
+  margin: 4px 0;
+}
+.blog-container .box .blog-btn {
+  display: flex;
+  align-items: center;
+  column-gap: 4px;
+  color: var(--text-color);
+}
+.blog-container .box .blog-btn .bx {
+  font-size: 20px;
+}
+.blog-container .box .blog-btn:hover {
+  color: var(--main-color);
+  column-gap: 0.7rem;
+  transition: 0.4s;
+}
+.footer {
+  background: var(--text-color);
+  color: #f6f6f6;
+  border-top: 2px solid var(--main-color);
+}
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+}
+.footer-container .logo {
+  color: var(--bg-color);
+  margin-bottom: 1rem;
+}
+.footer-container .footer-box {
+  display: flex;
+  flex-direction: column;
+}
+.social {
+  display: flex;
+  align-items: center;
+}
+.social a {
+  font-size: 24px;
+  color: var(--bg-color);
+  margin-right: 1rem;
+}
+.social a:hover {
+  color: var(--main-color);
+}
+.footer-box h3 {
+  font-size: 1.1rem;
+  font-weight: 400;
+  margin-bottom: 1rem;
+}
+.footer-box a,
+.footer-box p {
+  color: #818181;
+  margin-bottom: 10px;
+}
+.footer-box a:hover {
+  color: var(--main-color);
+}
+.copyright {
+  padding: 20px;
+  text-align: center;
+  color: var(--bg-color);
+  background: var(--text-color);
+}
