--- a/style.css
+++ b/style.css
@@ -16,6 +16,15 @@
   --text-color: #020102;
   --bg-color: #fff;
 }
+/*Custom Scroll Bar */
+html::-webkit-scrollbar {
+  width: 0.5rem;
+  background: transparent;
+}
+html::-webkit-scrollbar-thumb {
+  border-radius: 5rem;
+  background: var(--text-color);
+}
 section {
   padding: 4rem 0 2rem;
 }
@@ -37,6 +46,14 @@ header {
   top: 0;
   left: 0;
   z-index: 100;
+}
+header.shadow {
+  background: var(--bg-color);
+  box-shadow: 2px 4px 4px rgb(15, 54, 55 / 10%);
+  transition: 0.5s ease;
+}
+header.shadow #search-icon {
+  color: var(--text-color);
 }
 .nav {
   display: flex;
@@ -348,4 +365,111 @@ header {
   text-align: center;
   color: var(--bg-color);
   background: var(--text-color);
+}
+/* Making Responsive*/
+@media (max-width: 1080px) {
+  .container {
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+}
+@media (max-width: 991px) {
+  .nav {
+    padding: 15px 20px;
+  }
+  section {
+    padding: 3rem 0 1rem;
+  }
+  .home-text {
+    padding-left: 2rem;
+  }
+  .home-text h1 {
+    font-size: 2.1rem;
+  }
+}
+@media (max-width: 920px) {
+  #search-icon {
+    color: var(--text-color);
+  }
+}
+@media (max-width: 768px) {
+  .search-box input {
+    padding: 15px;
+  }
+  .nav {
+    padding: 10px 0;
+  }
+  .nav {
+    padding: 10px 0;
+  }
+  #menu-icon {
+    display: initial;
+  }
+  .navbar {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    background: var(--bg-color);
+    row-gap: 0.5rem;
+    text-align: center;
+    box-shadow: 4px 4px 20px rgb(15, 54, 55 / 20%);
+    clip-path: circle(0% at 0% 0%);
+    transition: 0.6s;
+  }
+  .navbar a {
+    display: block;
+    padding: 15px;
+  }
+  .navbar a:hover,
+  .navbar .active {
+    border-bottom: none;
+    background: var(--main-color);
+    color: var(--bg-color);
+  }
+  .navbar.active {
+    clip-path: circle(144% at 0% 0%);
+  }
+  .blog-container .box {
+    padding: 4px;
+  }
+}
+@media (max-width: 727px) {
+  .heading span {
+    font-size: 0.9rem;
+  }
+  .heading h2 {
+    font-size: 1.4rem;
+  }
+  .about {
+    flex-direction: column-reverse;
+  }
+  .about-text {
+    text-align: center;
+  }
+  .about-text h2 {
+    font-size: 1.4rem;
+  }
+}
+@media (max-width: 607px) {
+  .footer-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (max-width: 360px) {
+  .search-box input {
+    padding: 11px;
+  }
+  .home {
+    min-height: 500px;
+  }
+  .home-text h1 {
+    font-size: 2rem;
+  }
+  .home-text p br {
+    display: contents;
+  }
 }
